--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@ in html
         -->
         <style>
             @import url('css/demo.css');
+            @import url('https://fonts.googleapis.com/css?family=Pacifico');
             body{
                 background-color: #006;
             }
@@ -40,7 +41,7 @@ in html
             <hr width = 50% /> <!-- horzontal line -->
             <a href = "index.html">Home</a>
             <a href = "about.html"><strong>About</strong></a>
-            <a href = "contect.html">Contact</a>
+            <a href = "contact.html">Contact</a>
         </nav>
         <br><br>
         <div id= "content">
@@ -67,6 +68,7 @@ in html
                 <li><span class= "hobby">Music:</span> Grateful Dead brings out my inner hippie.</li>
                 <li><span class= "hobby">Designer Shoes:</span> Just when you believe you have enough shoes, there is room for another pair.</li>
                 <li><span class= "hobby">Dental Technology:</span> It just rocks!!</li>
+                <li><span class= "hobby">Movies:</span> Bollywood binge at once a week.</li>
             </ul>
          </div>
         <!-- This is the footer -->
