--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ in html
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Per-son-al Port-fil-o</title>
+        <title>Contact Me</title>
         <!-- cannot be in the style tags!
         <link href="css/demo.css" rel="stylesheet" type="text/css" />
         -->
@@ -39,33 +39,14 @@ in html
        </header> 
         <nav>
             <hr width = 50% /> <!-- horzontal line -->
-            <a href = "index.html"><strong>Home</strong></a>
+            <a href = "index.html">Home</a>
             <a href = "about.html">About</a>
-            <a href = "contact.html">Contact</a>
+            <a href = "contact.html"><strong>Contact</strong></a>
         </nav>
         <br><br>
-     
-        <table>
-            <tr>
-                <td>
-                    <div id="me"></div>
-                </td>
-                <td>
-                <div id="welcomeText">
-                    Hello!<br>
-                    <p>Thank you for visiting my couch surfing website.</p>
-                    <p>I am a couch surfering engineer and have been recently sleeping on the corporate couch.</p>
-                    <p>Feel free to <a href= "contact.html">contact</a> me!</p>
-                    <br><br>
-                    <em>"With ordinary talent and extrodinary 
-                        <strong>perserverence</strong>, all couches are attainable."
-                    </em><br>
-                    - Millie Hasan
-                </div>
-                </td>
-            </tr>
-        </table>
-     
+        <div id= "content">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVRv-OnMtgvV9i3pZ7CPwSxU4FDM5Ak_w63hQB1CcFw8WfLw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
         <!-- This is the footer -->
         <!-- The footer goes inside the body but not always -->
         <footer>
