--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ in html
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Per-son-al Port-fil-o</title>
+        <title>Personal Port-fil-o</title>
         <!-- cannot be in the style tags!
         <link href="css/demo.css" rel="stylesheet" type="text/css" />
         -->
         <style>
             @import url('css/demo.css');
-            @import url('https://fonts.googleapis.com/css?family=Pacifico');
+           @import url('https://fonts.googleapis.com/css?family=Courgette');
             body{
                 background-color: #006;
             }
