--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ in html
         -->
         <style>
             @import url('css/demo.css');
-            @import url('https://fonts.googleapis.com/css?family=Pacifico');
+            @import url('https://fonts.googleapis.com/css?family=Courgette');
             body{
                 background-color: #006;
             }
